Contact us alignment issue resolved

--- a/usnisa/public/css/style.css
+++ b/usnisa/public/css/style.css
@@ -2237,13 +2237,10 @@ img {
 }
 #aa-contact .aa-contact-area .aa-contact-top .aa-contact-form {
   display: inline;
-  float: left;
-  
-  
+   
 }
 #aa-contact .aa-contact-area .aa-contact-top .aa-contact-form .contactform {
   display: block;
-  width: 100%;
   margin: 10px 10px;
   
 }
